added some styling

--- a/src/styles.css
+++ b/src/styles.css
@@ -3,28 +3,59 @@
     margin: 0;
 }
 
+
 body {
     margin: 0px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+    background: linear-gradient(0.25turn, #3f87a6, #ebf8e1, #f69d3c);
 }
+
+
+#title {
+    margin-top: 40px;
+    font-size: 40px;
+    font-weight: bold;
+}
+
 
 #weather-form {
-    margin: 20px;
+    margin: 40px;
+    display: flex;
+    flex-direction: column;
 }
-
+#weather-form :not(:last-child) {
+    margin-bottom: 10px;
+}
 #weather-label {
+    
 }
-
 #weather-input {
-    width: 500px;
-    /* box-sizing: border-box; */
+    box-sizing: border-box;
+    width: 100%;
+    text-align: center;
 }
-
 #weather-btn {
-    /* box-sizing: border-box; */
+    width: 100px;
+    align-self: center;
 }
 
 
-
+#daily-weather {
+    display: flex;
+    width: 90%;
+    overflow-x: scroll;
+    overflow-y: hidden;
+    white-space: nowrap
+}
 .day {
     margin: 10px;
+}
+.day:first-child {
+    margin-left: 20px;
+}
+.day:last-child {
+    margin-right: 20px;
 }
